fix margins on mobile nav

--- a/frontend/styles/components/nav.css
+++ b/frontend/styles/components/nav.css
@@ -192,7 +192,7 @@
         transform: translateX(100%);
         transition: transform 0.6s cubic-bezier(0.4, 0, 0.2, 1);
         z-index: 1000;
-        padding-top: 84px;
+        padding-top: 24px;
         scrollbar-color: #333 #ffffff;
     }
 
